# willow-application-server-rs

./: .gitignore  Cargo.toml  README.md
migrations/: 20250516093810_init.down.sql  20250516093810_init.up.sql
src/: error.rs  http.rs  lib.rs  main.rs  state.rs  trace.rs  websocket.rs
src/api/: client.rs  config.rs  info.rs  mod.rs  release.rs  status.rs
src/db/: config.rs  pool.rs
src/endpoint/: homeassistant.rs  mod.rs
src/willow/: client.rs  config.rs  messages.rs  mod.rs  worker.rs
test/willow/messages/: cmd_endpoint.json  cmd_get_config.json  goodbye.json  hello.json  wake_end.json  wake_start.json
