[package]
name = "willow-application-server-rs"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["macros", "ws"] }
eui48 = { version = "1.1.0", features = ["serde"] }
futures-util = "0.3.31"
reqwest = { version = "0.12.15", features = ["h2", "http2", "json", "rustls-tls"], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.12.0"
sqlx = { version = "0.8.5", features = ["any", "postgres", "runtime-tokio", "sqlite", "tls-rustls"] }
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = "0.27.1"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["macros", "net", "rt-multi-thread", "time"] }
tokio-tungstenite = { version = "0.26.2", features = ["rustls-tls-webpki-roots"] }
tower-http = { version = "0.6.4", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tungstenite = { version = "0.26.2", features = ["url"] }
url = "2.5.4"
uuid = { version = "1.16.0", features = ["fast-rng", "serde", "v4", "v7"] }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
